re PR tree-optimization/21356 (Dominance error after aggressive dead code elimination (cd_dce))

PR 21356
	PR 22332
	* passes.c (execute_todo): Cleanup the CFG before updating
	SSA.

From-SVN: r101832